--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ li::before {
 </div>
 
 <div class="footer">
-    © 2025 AI Content SEO Assistant (AICSA) · Open-source WordPress plugin
+    © 2025 AI Content SEO Assistant (AICSA)
 </div>
 
 </body>
