--- a/index.html
+++ b/index.html
@@ -1,238 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>AI Content SEO Assistant (AICSA)</title>
+<meta charset="UTF-8">
+<title>VS CodeLab AI</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="VS CodeLab AI builds professional WordPress plugins and AI-powered tools.">
 
 <style>
-/* ===============================
-   RESET & BASE
-================================ */
-* {
+body {
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow: hidden; /* 🚫 No scroll */
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    background: radial-gradient(1200px at top right, #1e293b, #020617);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    background: #0f172a;
     color: #e5e7eb;
 }
-
-/* ===============================
-   LAYOUT
-================================ */
-.page {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 40px;
-}
-
 .container {
-    max-width: 1200px;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1.1fr 0.9fr;
-    gap: 60px;
-    align-items: center;
-}
-
-/* ===============================
-   LEFT CONTENT
-================================ */
-.badge {
-    display: inline-block;
-    background: rgba(59,130,246,0.15);
-    color: #60a5fa;
-    padding: 6px 14px;
-    border-radius: 999px;
-    font-size: 13px;
-    font-weight: 600;
-    margin-bottom: 18px;
-}
-
-h1 {
-    font-size: 54px;
-    line-height: 1.1;
-    font-weight: 800;
-    margin-bottom: 20px;
-}
-
-h1 span {
-    background: linear-gradient(90deg, #38bdf8, #22c55e);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-p {
-    font-size: 18px;
-    line-height: 1.6;
-    color: #cbd5f5;
-    max-width: 520px;
-    margin-bottom: 32px;
-}
-
-/* ===============================
-   BUTTONS
-================================ */
-.actions {
-    display: flex;
-    gap: 16px;
-}
-
-.btn {
-    padding: 14px 22px;
-    border-radius: 10px;
-    font-size: 15px;
-    font-weight: 600;
-    text-decoration: none;
-    transition: 0.2s ease;
-}
-
-.btn-primary {
-    background: linear-gradient(135deg, #3b82f6, #22c55e);
-    color: #020617;
-}
-
-.btn-primary:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 10px 30px rgba(34,197,94,0.3);
-}
-
-.btn-secondary {
-    border: 1px solid #334155;
-    color: #e5e7eb;
-}
-
-.btn-secondary:hover {
-    background: #020617;
-}
-
-/* ===============================
-   RIGHT CARD
-================================ */
-.card {
-    background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));
-    border: 1px solid rgba(255,255,255,0.08);
-    border-radius: 18px;
-    padding: 28px;
-    backdrop-filter: blur(12px);
-}
-
-.card h3 {
-    font-size: 20px;
-    margin-bottom: 16px;
-}
-
-ul {
-    list-style: none;
-    display: grid;
-    gap: 14px;
-}
-
-li {
-    display: flex;
-    gap: 10px;
-    font-size: 15px;
-    color: #dbeafe;
-}
-
-li::before {
-    content: "✔";
-    color: #22c55e;
-    font-weight: bold;
-}
-
-/* ===============================
-   FOOTER
-================================ */
-.footer {
-    position: absolute;
-    bottom: 16px;
-    left: 0;
-    right: 0;
+    max-width: 900px;
+    margin: auto;
+    padding: 80px 20px;
     text-align: center;
-    font-size: 13px;
-    color: #64748b;
 }
-
-/* ===============================
-   RESPONSIVE
-================================ */
-@media (max-width: 900px) {
-    .container {
-        grid-template-columns: 1fr;
-        gap: 40px;
-    }
-
-    h1 {
-        font-size: 42px;
-    }
-
-    .page {
-        padding: 24px;
-    }
+h1 {
+    font-size: 3rem;
+    margin-bottom: 10px;
+}
+p {
+    font-size: 1.2rem;
+    color: #cbd5f5;
+}
+.card {
+    background: #111827;
+    padding: 30px;
+    border-radius: 14px;
+    margin-top: 40px;
+}
+a {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 14px 28px;
+    background: #2563eb;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 10px;
+    font-weight: 600;
+}
+a:hover {
+    background: #1d4ed8;
+}
+footer {
+    margin-top: 80px;
+    font-size: 14px;
+    color: #94a3b8;
 }
 </style>
 </head>
 
 <body>
+<div class="container">
+    <h1>VS CodeLab AI</h1>
+    <p>Building high-quality WordPress plugins and AI-powered tools.</p>
 
-<div class="page">
-    <div class="container">
-
-        <!-- LEFT -->
-        <div>
-            <div class="badge">WordPress Plugin</div>
-
-            <h1>
-                AI Content <span>SEO Assistant</span><br>
-                (AICSA)
-            </h1>
-
-            <p>
-                A modern WordPress plugin that helps you generate high-quality,
-                SEO-optimized content using multiple AI providers — directly
-                inside your favorite page builders.
-            </p>
-
-            <div class="actions">
-                <a href="https://github.com/YOUR_USERNAME/YOUR_REPO" class="btn btn-primary">
-                    View on GitHub
-                </a>
-                <a href="#features" class="btn btn-secondary">
-                    Plugin Features
-                </a>
-            </div>
-        </div>
-
-        <!-- RIGHT -->
-        <div class="card">
-            <h3>Key Features</h3>
-            <ul>
-                <li>Multi-provider AI support (OpenAI, Gemini, Groq)</li>
-                <li>Works with Gutenberg, Elementor, Beaver Builder</li>
-                <li>Word-limit & formatting control</li>
-                <li>SEO-focused content generation</li>
-                <li>Clean UI & developer-friendly architecture</li>
-                <li>Optimized for speed & scalability</li>
-            </ul>
-        </div>
-
+    <div class="card">
+        <h2>Our Products</h2>
+        <p>Professional, secure, and performance-optimized solutions.</p>
+        <a href="/ai-content-seo-assistant/">AI Content + SEO Assistant</a>
     </div>
-</div>
 
-<div class="footer">
-    © 2025 AI Content SEO Assistant (AICSA)
+    <footer>
+        © 2025 VS CodeLab AI. All rights reserved.
+    </footer>
 </div>
-
 </body>
 </html>
