--- a/ai-content-seo/index.html
+++ b/ai-content-seo/index.html
@@ -1,1 +1,109 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>AI Content + SEO Assistant</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="AI Content + SEO Assistant is a WordPress plugin supporting OpenAI, Gemini, and Groq for AI-powered content creation.">
 
+<style>
+body {
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    background: #0b1220;
+    color: #e5e7eb;
+}
+.container {
+    max-width: 1000px;
+    margin: auto;
+    padding: 70px 20px;
+}
+h1 {
+    font-size: 2.8rem;
+}
+.tagline {
+    font-size: 1.2rem;
+    color: #c7d2fe;
+}
+.section {
+    margin-top: 50px;
+    background: #111827;
+    padding: 30px;
+    border-radius: 16px;
+}
+ul {
+    margin: 0;
+    padding-left: 20px;
+}
+li {
+    margin-bottom: 10px;
+}
+.badge {
+    display: inline-block;
+    background: #2563eb;
+    padding: 6px 14px;
+    border-radius: 999px;
+    font-size: 13px;
+    font-weight: 600;
+}
+footer {
+    margin-top: 80px;
+    font-size: 14px;
+    color: #94a3b8;
+}
+a {
+    color: #93c5fd;
+}
+</style>
+</head>
+
+<body>
+<div class="container">
+
+    <span class="badge">WordPress Plugin</span>
+    <h1>AI Content + SEO Assistant</h1>
+    <p class="tagline">
+        A multi-provider AI content generator for WordPress supporting OpenAI, Gemini, and Groq.
+    </p>
+
+    <div class="section">
+        <h2>Key Features</h2>
+        <ul>
+            <li>AI-powered content generation inside WordPress editors</li>
+            <li>Supports OpenAI, Google Gemini, and Groq APIs</li>
+            <li>Compatible with Gutenberg, Classic Editor, Elementor, Beaver Builder, and WPBakery</li>
+            <li>Secure API handling and sanitized inputs</li>
+            <li>Optimized for performance and Envato standards</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>External Services</h2>
+        <ul>
+            <li>OpenAI API (user-provided key)</li>
+            <li>Google Gemini API (user-provided key)</li>
+            <li>Groq API (user-provided key)</li>
+            <li>Chart.js (loaded via CDN for analytics visualization)</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>Documentation & Support</h2>
+        <p>
+            Documentation and updates are provided by VS CodeLab AI.
+        </p>
+        <p>
+            <strong>Plugin URI:</strong><br>
+            <a href="https://vscodelab-ai.github.io/ai-content-seo-assistant">
+                https://vscodelab-ai.github.io/ai-content-seo-assistant
+            </a>
+        </p>
+    </div>
+
+    <footer>
+        © 2025 VS CodeLab AI · Built for WordPress · GPLv2+
+    </footer>
+
+</div>
+</body>
+</html>
