--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ footer {
     <div class="card">
         <h2>Our Products</h2>
         <p>Professional, secure, and performance-optimized solutions.</p>
-        <a href="/ai-content-seo-assistant/index.html">AI Content + SEO Assistant</a>
+        <a href="/ai-content-seo/index.html">AI Content + SEO Assistant</a>
     </div>
 
     <footer>
