--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ footer {
     </div>
 
     <footer>
-        © 2025 VS CodeLab AI. All rights reserved.
+        © 2025 VS CodeLab. All rights reserved.
     </footer>
 </div>
 </body>
