--- a/ai-content-seo/index.html
+++ b/ai-content-seo/index.html
@@ -1,109 +1,239 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>AI Content + SEO Assistant</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="AI Content + SEO Assistant is a WordPress plugin supporting OpenAI, Gemini, and Groq for AI-powered content creation.">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>AI Content SEO Assistant (AICSA)</title>
 
 <style>
-body {
+/* ===============================
+   RESET & BASE
+================================ */
+* {
     margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    background: #0b1220;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* 🚫 No scroll */
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    background: radial-gradient(1200px at top right, #1e293b, #020617);
     color: #e5e7eb;
 }
+
+/* ===============================
+   LAYOUT
+================================ */
+.page {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
+}
+
 .container {
-    max-width: 1000px;
-    margin: auto;
-    padding: 70px 20px;
+    max-width: 1200px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1.1fr 0.9fr;
+    gap: 60px;
+    align-items: center;
 }
-h1 {
-    font-size: 2.8rem;
-}
-.tagline {
-    font-size: 1.2rem;
-    color: #c7d2fe;
-}
-.section {
-    margin-top: 50px;
-    background: #111827;
-    padding: 30px;
-    border-radius: 16px;
-}
-ul {
-    margin: 0;
-    padding-left: 20px;
-}
-li {
-    margin-bottom: 10px;
-}
+
+/* ===============================
+   LEFT CONTENT
+================================ */
 .badge {
     display: inline-block;
-    background: #2563eb;
+    background: rgba(59,130,246,0.15);
+    color: #60a5fa;
     padding: 6px 14px;
     border-radius: 999px;
     font-size: 13px;
     font-weight: 600;
+    margin-bottom: 18px;
 }
-footer {
-    margin-top: 80px;
-    font-size: 14px;
-    color: #94a3b8;
+
+h1 {
+    font-size: 54px;
+    line-height: 1.1;
+    font-weight: 800;
+    margin-bottom: 20px;
 }
-a {
-    color: #93c5fd;
+
+h1 span {
+    background: linear-gradient(90deg, #38bdf8, #22c55e);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #cbd5f5;
+    max-width: 520px;
+    margin-bottom: 32px;
+}
+
+/* ===============================
+   BUTTONS
+================================ */
+.actions {
+    display: flex;
+    gap: 16px;
+}
+
+.btn {
+    padding: 14px 22px;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: 0.2s ease;
+}
+
+.btn-primary {
+    background: linear-gradient(135deg, #3b82f6, #22c55e);
+    color: #020617;
+}
+
+.btn-primary:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 10px 30px rgba(34,197,94,0.3);
+}
+
+.btn-secondary {
+    border: 1px solid #334155;
+    color: #e5e7eb;
+}
+
+.btn-secondary:hover {
+    background: #020617;
+}
+
+/* ===============================
+   RIGHT CARD
+================================ */
+.card {
+    background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));
+    border: 1px solid rgba(255,255,255,0.08);
+    border-radius: 18px;
+    padding: 28px;
+    backdrop-filter: blur(12px);
+}
+
+.card h3 {
+    font-size: 20px;
+    margin-bottom: 16px;
+}
+
+ul {
+    list-style: none;
+    display: grid;
+    gap: 14px;
+}
+
+li {
+    display: flex;
+    gap: 10px;
+    font-size: 15px;
+    color: #dbeafe;
+}
+
+li::before {
+    content: "✔";
+    color: #22c55e;
+    font-weight: bold;
+}
+
+/* ===============================
+   FOOTER
+================================ */
+.footer {
+    position: absolute;
+    bottom: 16px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-size: 13px;
+    color: #64748b;
+}
+
+/* ===============================
+   RESPONSIVE
+================================ */
+@media (max-width: 900px) {
+    .container {
+        grid-template-columns: 1fr;
+        gap: 40px;
+    }
+
+    h1 {
+        font-size: 42px;
+    }
+
+    .page {
+        padding: 24px;
+    }
 }
 </style>
 </head>
 
 <body>
-<div class="container">
 
-    <span class="badge">WordPress Plugin</span>
-    <h1>AI Content + SEO Assistant</h1>
-    <p class="tagline">
-        A multi-provider AI content generator for WordPress supporting OpenAI, Gemini, and Groq.
-    </p>
+<div class="page">
+    <div class="container">
 
-    <div class="section">
-        <h2>Key Features</h2>
-        <ul>
-            <li>AI-powered content generation inside WordPress editors</li>
-            <li>Supports OpenAI, Google Gemini, and Groq APIs</li>
-            <li>Compatible with Gutenberg, Classic Editor, Elementor, Beaver Builder, and WPBakery</li>
-            <li>Secure API handling and sanitized inputs</li>
-            <li>Optimized for performance and Envato standards</li>
-        </ul>
+        <!-- LEFT -->
+        <div>
+            <div class="badge">WordPress Plugin</div>
+
+            <h1>
+                AI Content <span>SEO Assistant</span><br>
+                (AICSA)
+            </h1>
+
+            <p>
+                A modern WordPress plugin that helps you generate high-quality,
+                SEO-optimized content using multiple AI providers — directly
+                inside your favorite page builders.
+            </p>
+
+            <div class="actions">
+                <a href="https://github.com/YOUR_USERNAME/YOUR_REPO" class="btn btn-primary">
+                    View on GitHub
+                </a>
+                <a href="#features" class="btn btn-secondary">
+                    Plugin Features
+                </a>
+            </div>
+        </div>
+
+        <!-- RIGHT -->
+        <div class="card">
+            <h3>Key Features</h3>
+            <ul>
+                <li>Multi-provider AI support (OpenAI, Gemini, Groq)</li>
+                <li>Works with Gutenberg, Elementor, Beaver Builder</li>
+                <li>Word-limit & formatting control</li>
+                <li>SEO-focused content generation</li>
+                <li>Clean UI & developer-friendly architecture</li>
+                <li>Optimized for speed & scalability</li>
+            </ul>
+        </div>
+
     </div>
-
-    <div class="section">
-        <h2>External Services</h2>
-        <ul>
-            <li>OpenAI API (user-provided key)</li>
-            <li>Google Gemini API (user-provided key)</li>
-            <li>Groq API (user-provided key)</li>
-            <li>Chart.js (loaded via CDN for analytics visualization)</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Documentation & Support</h2>
-        <p>
-            Documentation and updates are provided by VS CodeLab AI.
-        </p>
-        <p>
-            <strong>Plugin URI:</strong><br>
-            <a href="https://vscodelab-ai.github.io/ai-content-seo-assistant">
-                https://vscodelab-ai.github.io/ai-content-seo-assistant
-            </a>
-        </p>
-    </div>
-
-    <footer>
-        © 2025 VS CodeLab AI · Built for WordPress · GPLv2+
-    </footer>
-
 </div>
+
+<div class="footer">
+    © 2025 AI Content SEO Assistant (AICSA) · Open-source WordPress plugin
+</div>
+
 </body>
 </html>
