--- a/index.html
+++ b/index.html
@@ -1,73 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>VS CodeLab AI</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="VS CodeLab AI builds professional WordPress plugins and AI-powered tools.">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>VSCodeLab AI — WordPress AI Plugins</title>
 
 <style>
-body {
+/* ===============================
+   RESET & BASE
+================================ */
+* {
     margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    background: #0f172a;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    background: radial-gradient(1200px at top right, #1e293b, #020617);
     color: #e5e7eb;
 }
+
+/* ===============================
+   LAYOUT
+================================ */
+.page {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
+}
+
 .container {
-    max-width: 900px;
-    margin: auto;
-    padding: 80px 20px;
-    text-align: center;
+    max-width: 1200px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1.1fr 0.9fr;
+    gap: 60px;
+    align-items: center;
 }
-h1 {
-    font-size: 3rem;
-    margin-bottom: 10px;
-}
-p {
-    font-size: 1.2rem;
-    color: #cbd5f5;
-}
-.card {
-    background: #111827;
-    padding: 30px;
-    border-radius: 14px;
-    margin-top: 40px;
-}
-a {
+
+/* ===============================
+   LEFT CONTENT
+================================ */
+.badge {
     display: inline-block;
-    margin-top: 20px;
-    padding: 14px 28px;
-    background: #2563eb;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 10px;
+    background: rgba(59,130,246,0.15);
+    color: #60a5fa;
+    padding: 6px 14px;
+    border-radius: 999px;
+    font-size: 13px;
     font-weight: 600;
+    margin-bottom: 18px;
 }
-a:hover {
-    background: #1d4ed8;
+
+h1 {
+    font-size: 54px;
+    line-height: 1.1;
+    font-weight: 800;
+    margin-bottom: 20px;
 }
-footer {
-    margin-top: 80px;
-    font-size: 14px;
-    color: #94a3b8;
+
+h1 span {
+    background: linear-gradient(90deg, #38bdf8, #22c55e);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #cbd5f5;
+    max-width: 520px;
+    margin-bottom: 32px;
+}
+
+/* ===============================
+   BUTTONS
+================================ */
+.actions {
+    display: flex;
+    gap: 16px;
+}
+
+.btn {
+    padding: 14px 22px;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: 0.2s ease;
+}
+
+.btn-primary {
+    background: linear-gradient(135deg, #3b82f6, #22c55e);
+    color: #020617;
+}
+
+.btn-primary:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 10px 30px rgba(34,197,94,0.3);
+}
+
+.btn-secondary {
+    border: 1px solid #334155;
+    color: #e5e7eb;
+}
+
+.btn-secondary:hover {
+    background: #020617;
+}
+
+/* ===============================
+   RIGHT CARD
+================================ */
+.card {
+    background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));
+    border: 1px solid rgba(255,255,255,0.08);
+    border-radius: 18px;
+    padding: 28px;
+    backdrop-filter: blur(12px);
+}
+
+.card h3 {
+    font-size: 20px;
+    margin-bottom: 16px;
+}
+
+ul {
+    list-style: none;
+    display: grid;
+    gap: 14px;
+}
+
+li {
+    display: flex;
+    gap: 10px;
+    font-size: 15px;
+    color: #dbeafe;
+}
+
+li::before {
+    content: "✔";
+    color: #22c55e;
+    font-weight: bold;
+}
+
+/* ===============================
+   FOOTER
+================================ */
+.footer {
+    position: absolute;
+    bottom: 16px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-size: 13px;
+    color: #64748b;
+}
+
+/* ===============================
+   RESPONSIVE
+================================ */
+@media (max-width: 900px) {
+    .container {
+        grid-template-columns: 1fr;
+        gap: 40px;
+    }
+
+    h1 {
+        font-size: 42px;
+    }
+
+    .page {
+        padding: 24px;
+    }
 }
 </style>
 </head>
 
 <body>
-<div class="container">
-    <h1>VS CodeLab AI</h1>
-    <p>Building high-quality WordPress plugins and AI-powered tools.</p>
 
-    <div class="card">
-        <h2>Our Products</h2>
-        <p>Professional, secure, and performance-optimized solutions.</p>
-        <a href="/ai-content-seo/index.html">AI Content + SEO Assistant</a>
+<div class="page">
+    <div class="container">
+
+        <!-- LEFT -->
+        <div>
+            <div class="badge">VSCodeLab AI</div>
+
+            <h1>
+                Building <span>AI-Powered</span><br>
+                WordPress Plugins
+            </h1>
+
+            <p>
+                Open-source AI tools and WordPress plugins focused on
+                content creation, SEO automation, and developer-friendly
+                architecture.
+            </p>
+
+            <div class="actions">
+                <a href="/ai-content-seo/" class="btn btn-primary">
+                        
+                    View AI Content + SEO Assistant (AICSA) Plugin
+                </a>
+               
+            </div>
+        </div>
+
+        <!-- RIGHT -->
+        <div class="card">
+            <h3>What We Build</h3>
+            <ul>
+                <li>AI-powered WordPress plugins</li>
+                <li>Multi-provider AI integrations</li>
+                <li>SEO-focused content tools</li>
+                <li>Elementor, Gutenberg & Beaver support</li>
+                <li>Clean, scalable plugin architecture</li>
+                <li>Envato & WordPress.org ready code</li>
+            </ul>
+        </div>
+
     </div>
-
-    <footer>
-        © 2025 VS CodeLab. All rights reserved.
-    </footer>
 </div>
+
+<div class="footer">
+    © 2025 VSCodeLab
+</div>
+
 </body>
 </html>
+
+
