--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>VSCodeLab AI — WordPress AI Plugins</title>
+<title>VSCodeLab — WordPress Plugin Development</title>
 
 <style>
 /* ===============================
-   RESET & BASE
+   RESET
 ================================ */
 * {
     margin: 0;
@@ -17,31 +17,27 @@
 
 html, body {
     width: 100%;
-    height: 100%;
-    overflow: hidden;
+    min-height: 100%;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     background: radial-gradient(1200px at top right, #1e293b, #020617);
     color: #e5e7eb;
 }
 
 /* ===============================
-   LAYOUT
+   PAGE WRAPPER
 ================================ */
-.page {
-    height: 100vh;
-    width: 100vw;
+body {
     display: flex;
-    align-items: center;
     justify-content: center;
-    padding: 40px;
+    padding: clamp(20px, 4vw, 40px);
 }
 
-.container {
-    max-width: 1200px;
+.wrapper {
     width: 100%;
+    max-width: 1200px;
     display: grid;
-    grid-template-columns: 1.1fr 0.9fr;
-    gap: 60px;
+    grid-template-columns: minmax(0, 1.3fr) minmax(0, 0.7fr);
+    gap: clamp(40px, 6vw, 80px);
     align-items: center;
 }
 
@@ -56,14 +52,14 @@ html, body {
     border-radius: 999px;
     font-size: 13px;
     font-weight: 600;
-    margin-bottom: 18px;
+    margin-bottom: 20px;
 }
 
 h1 {
-    font-size: 54px;
-    line-height: 1.1;
+    font-size: clamp(36px, 6vw, 52px);
     font-weight: 800;
-    margin-bottom: 20px;
+    line-height: 1.15;
+    margin-bottom: 22px;
 }
 
 h1 span {
@@ -73,90 +69,81 @@ h1 span {
 }
 
 p {
-    font-size: 18px;
-    line-height: 1.6;
+    font-size: clamp(16px, 2.4vw, 18px);
+    line-height: 1.65;
     color: #cbd5f5;
-    max-width: 520px;
-    margin-bottom: 32px;
+    max-width: 560px;
+    margin-bottom: 34px;
 }
 
-/* ===============================
-   BUTTONS
-================================ */
-.actions {
-    display: flex;
-    gap: 16px;
-}
-
-.btn {
-    padding: 14px 22px;
-    border-radius: 10px;
-    font-size: 15px;
-    font-weight: 600;
-    text-decoration: none;
-    transition: 0.2s ease;
-}
-
-.btn-primary {
+.actions a {
+    display: inline-block;
+    padding: 14px 26px;
+    border-radius: 12px;
     background: linear-gradient(135deg, #3b82f6, #22c55e);
     color: #020617;
+    font-weight: 600;
+    text-decoration: none;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-.btn-primary:hover {
+.actions a:hover {
     transform: translateY(-2px);
-    box-shadow: 0 10px 30px rgba(34,197,94,0.3);
-}
-
-.btn-secondary {
-    border: 1px solid #334155;
-    color: #e5e7eb;
-}
-
-.btn-secondary:hover {
-    background: #020617;
+    box-shadow: 0 12px 35px rgba(34,197,94,0.3);
 }
 
 /* ===============================
-   RIGHT CARD
+   SLIDER CONTAINER
 ================================ */
-.card {
-    background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));
-    border: 1px solid rgba(255,255,255,0.08);
-    border-radius: 18px;
-    padding: 28px;
-    backdrop-filter: blur(12px);
+.slider-wrap {
+    width: 100%;
+    max-width: clamp(260px, 40vw, 360px);
+    margin-left: auto;
+    perspective: 1000px;
 }
 
-.card h3 {
-    font-size: 20px;
-    margin-bottom: 16px;
+/* ===============================
+   3D SLIDER
+================================ */
+.slider {
+    width: 100%;
+    aspect-ratio: 16 / 10;
+    position: relative;
+    transform-style: preserve-3d;
+    animation: rotate 22s linear infinite;
 }
 
-ul {
-    list-style: none;
-    display: grid;
-    gap: 14px;
+.slide {
+    position: absolute;
+    inset: 0;
+    border-radius: 14px;
+    overflow: hidden;
+    background: #020617;
+    box-shadow: 0 16px 45px rgba(0,0,0,0.55);
 }
 
-li {
-    display: flex;
-    gap: 10px;
-    font-size: 15px;
-    color: #dbeafe;
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-li::before {
-    content: "✔";
-    color: #22c55e;
-    font-weight: bold;
+/* Desktop depth */
+.slide:nth-child(1) { transform: rotateY(0deg) translateZ(300px); }
+.slide:nth-child(2) { transform: rotateY(120deg) translateZ(300px); }
+.slide:nth-child(3) { transform: rotateY(240deg) translateZ(300px); }
+
+@keyframes rotate {
+    from { transform: rotateY(0deg); }
+    to   { transform: rotateY(360deg); }
 }
 
 /* ===============================
    FOOTER
 ================================ */
-.footer {
-    position: absolute;
-    bottom: 16px;
+footer {
+    position: fixed;
+    bottom: 14px;
     left: 0;
     right: 0;
     text-align: center;
@@ -165,20 +152,44 @@ li::before {
 }
 
 /* ===============================
-   RESPONSIVE
+   TABLET
 ================================ */
-@media (max-width: 900px) {
-    .container {
+@media (max-width: 1024px) {
+    .wrapper {
         grid-template-columns: 1fr;
-        gap: 40px;
+        gap: 60px;
     }
 
-    h1 {
-        font-size: 42px;
+    .slider-wrap {
+        margin: 0 auto;
     }
 
-    .page {
-        padding: 24px;
+    .slide:nth-child(1),
+    .slide:nth-child(2),
+    .slide:nth-child(3) {
+        transform: translateZ(220px) rotateY(calc(var(--i) * 120deg));
+    }
+}
+
+/* ===============================
+   MOBILE
+================================ */
+@media (max-width: 600px) {
+    body {
+        padding: 20px;
+    }
+
+    .wrapper {
+        gap: 50px;
+    }
+
+    .slider {
+        animation-duration: 30s;
+    }
+
+    footer {
+        position: static;
+        margin-top: 40px;
     }
 }
 </style>
@@ -186,54 +197,52 @@ li::before {
 
 <body>
 
-<div class="page">
-    <div class="container">
+<div class="wrapper">
 
-        <!-- LEFT -->
-        <div>
-            <div class="badge">VSCodeLab AI</div>
+    <!-- LEFT -->
+    <div>
+        <div class="badge">Author · WordPress Developer</div>
 
-            <h1>
-                Building <span>AI-Powered</span><br>
-                WordPress Plugins
-            </h1>
+        <h1>
+            VSCodeLab<br>
+            <span>WordPress Plugin</span><br>
+            Engineering
+        </h1>
 
-            <p>
-                Open-source AI tools and WordPress plugins focused on
-                content creation, SEO automation, and developer-friendly
-                architecture.
-            </p>
+        <p>
+            VSCodeLab is a WordPress-focused development studio with years of
+            experience building professional plugins and web solutions.
+            We specialize in scalable architecture, clean UI, and
+            marketplace-ready code.
+        </p>
 
-            <div class="actions">
-                <a href="/ai-content-seo/" class="btn btn-primary">
-                        
-                    View AI Content + SEO Assistant (AICSA) Plugin
-                </a>
-               
+        <div class="actions">
+            <a href="/ai-content-seo/">
+                View AI Content + SEO Assistant Plugin
+            </a>
+        </div>
+    </div>
+
+    <!-- RIGHT -->
+    <div class="slider-wrap">
+        <div class="slider">
+            <div class="slide">
+                <img src="images/plugin-dashboard.png" alt="Plugin Dashboard">
+            </div>
+            <div class="slide">
+                <img src="images/elementor-widget.png" alt="Elementor Widget">
+            </div>
+            <div class="slide">
+                <img src="images/settings-page.png" alt="Plugin Settings">
             </div>
         </div>
-
-        <!-- RIGHT -->
-        <div class="card">
-            <h3>What We Build</h3>
-            <ul>
-                <li>AI-powered WordPress plugins</li>
-                <li>Multi-provider AI integrations</li>
-                <li>SEO-focused content tools</li>
-                <li>Elementor, Gutenberg & Beaver support</li>
-                <li>Clean, scalable plugin architecture</li>
-                <li>Envato & WordPress.org ready code</li>
-            </ul>
-        </div>
-
     </div>
+
 </div>
 
-<div class="footer">
-    © 2025 VSCodeLab
-</div>
+<footer>
+    © 2025 VS CodeLab
+</footer>
 
 </body>
 </html>
-
-
