--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@ footer {
     <div class="slider-wrap">
         <div class="slider">
             <div class="slide">
-                <img src="images/plugin-dashboard.png" alt="Plugin Dashboard">
+                <img src="images/screenshot-1.png" alt="Plugin Dashboard">
             </div>
             <div class="slide">
-                <img src="images/elementor-widget.png" alt="Elementor Widget">
+                <img src="images/screenshot-3.png" alt="Elementor Widget">
             </div>
             <div class="slide">
-                <img src="images/settings-page.png" alt="Plugin Settings">
+                <img src="images/screenshot-5.png" alt="Plugin Settings">
             </div>
         </div>
     </div>
