--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@ body {
     display: flex;
     justify-content: center;
     padding: clamp(20px, 4vw, 40px);
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
 }
-
 .wrapper {
     width: 100%;
     max-width: 1200px;
