--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ footer {
 
     <!-- LEFT -->
     <div>
-        <div class="badge">Author · WordPress Developer</div>
+        <div class="badge">Author · VS CodeLab</div>
 
         <h1>
             VSCodeLab<br>
